# refy

./: Cargo.toml  LICENSE  README.md
crates/refy-adapter/: Cargo.toml
crates/refy-adapter-persist/: Cargo.toml
crates/refy-app/: Cargo.toml
crates/refy-app/src/entities/: mod.rs  ticket.rs  ticket_tags.rs  verifier_tags.rs
crates/refy-core/: Cargo.toml
crates/refy-core/src/: error.rs  lib.rs
crates/refy-core/src/entities/: mod.rs  tag.rs  ticket_tag.rs  verified_ticket.rs  verified_tickets.rs  verifier.rs  verifier_tag.rs
crates/refy-core/src/repos/: mod.rs  tags.rs  ticket_tags.rs  tickets.rs  verified_tickets.rs  verifier_tags.rs  verifiers.rs
crates/refy-core/src/usecases/: mod.rs
crates/refy-core/src/usecases/tags/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/refy-core/src/usecases/ticket_tags/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs
crates/refy-core/src/usecases/tickets/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/refy-core/src/usecases/verified_tickets/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/refy-core/src/usecases/verifier_tags/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs
crates/refy-core/src/usecases/verifiers/: add.rs  get.rs  get_page.rs  mod.rs  remove.rs  update.rs
crates/refy-driver/: Cargo.toml
