[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Osama Al-Maqtari <almaktary.osama@gmail.com>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = true

[workspace.dependencies]
anyhow = { version = "1" }
chrono = { version = "0", features = ["serde"] }
reddd = { version = "0", features = ["serde", "usecase"] }
reddd-macros = { version = "0" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
uuid = { version = "1", features = ["fast-rng", "serde", "std", "v7"] }
