[package]
name = "refy-core"
description = "refy core/domain layer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]

# workspace dependencies
chrono = { workspace = true }
reddd = { workspace = true }
reddd-macros = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
