[package]
name = "refy-core"
description = "refy core/domain layer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]

# workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
reddd = { workspace = true }
reddd-macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
